--- a/src/assets/scss/main/_style.scss
+++ b/src/assets/scss/main/_style.scss
@@ -60,6 +60,24 @@ hr.separator {
   color: #666;
 }
 
+.skill-container {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  place-items: center;
+  text-align: center;
+}
+
+.skill-item {
+  border-radius: 50%;
+  border: 1px solid yellowgreen;
+  width: 100px;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
+}
+
 $light-bg: #fff;
 $light-pri-color: yellowgreen;
 
@@ -753,19 +771,19 @@ body.light .header ul.icon-menu li.icon-box:hover i {
 
 /* Skills */
 
-.about .c100 {
-  float: none !important;
-  margin: 0 auto;
-  background-color: #eee;
-}
+// .about .c100 {
+//   float: none !important;
+//   margin: 0 auto;
+//   background-color: #eee;
+// }
 
-.about .c100 > span {
-  color: #666;
-}
+// .about .c100 > span {
+//   color: #666;
+// }
 
-.about .c100:after {
-  background-color: #fff;
-}
+// .about .c100:after {
+//   background-color: #fff;
+// }
 
 .portfolio .main-content {
   padding-bottom: 60px;
@@ -1563,14 +1581,14 @@ body.light .contact .custom-span-contact a {
     }
   }
 
-  &::after {
-    position: absolute;
-    content: '';
-    top: 0px;
-    left: 0px;
-    background-color: #222;
-    z-index: 4;
-  }
+  // &::after {
+  //   position: absolute;
+  //   content: '';
+  //   top: 0px;
+  //   left: 0px;
+  //   background-color: #222;
+  //   z-index: 4;
+  // }
 }
 body.light .tab-panel_list > div {
   &::after {
@@ -1650,62 +1668,62 @@ button:focus {
 .blog-post .meta i {
   color: #ffb400;
 }
-.box_inner.about {
-  .pie,
-  .c100 .bar,
-  .c100.p51 .fill,
-  .c100.p52 .fill,
-  .c100.p53 .fill,
-  .c100.p54 .fill,
-  .c100.p55 .fill,
-  .c100.p56 .fill,
-  .c100.p57 .fill,
-  .c100.p58 .fill,
-  .c100.p59 .fill,
-  .c100.p60 .fill,
-  .c100.p61 .fill,
-  .c100.p62 .fill,
-  .c100.p63 .fill,
-  .c100.p64 .fill,
-  .c100.p65 .fill,
-  .c100.p66 .fill,
-  .c100.p67 .fill,
-  .c100.p68 .fill,
-  .c100.p69 .fill,
-  .c100.p70 .fill,
-  .c100.p71 .fill,
-  .c100.p72 .fill,
-  .c100.p73 .fill,
-  .c100.p74 .fill,
-  .c100.p75 .fill,
-  .c100.p76 .fill,
-  .c100.p77 .fill,
-  .c100.p78 .fill,
-  .c100.p79 .fill,
-  .c100.p80 .fill,
-  .c100.p81 .fill,
-  .c100.p82 .fill,
-  .c100.p83 .fill,
-  .c100.p84 .fill,
-  .c100.p85 .fill,
-  .c100.p86 .fill,
-  .c100.p87 .fill,
-  .c100.p88 .fill,
-  .c100.p89 .fill,
-  .c100.p90 .fill,
-  .c100.p91 .fill,
-  .c100.p92 .fill,
-  .c100.p93 .fill,
-  .c100.p94 .fill,
-  .c100.p95 .fill,
-  .c100.p96 .fill,
-  .c100.p97 .fill,
-  .c100.p98 .fill,
-  .c100.p99 .fill,
-  .c100.p100 .fill {
-    border: 0.08em solid #ffb400;
-  }
-}
+// .box_inner.about {
+//   .pie,
+//   .c100 .bar,
+//   .c100.p51 .fill,
+//   .c100.p52 .fill,
+//   .c100.p53 .fill,
+//   .c100.p54 .fill,
+//   .c100.p55 .fill,
+//   .c100.p56 .fill,
+//   .c100.p57 .fill,
+//   .c100.p58 .fill,
+//   .c100.p59 .fill,
+//   .c100.p60 .fill,
+//   .c100.p61 .fill,
+//   .c100.p62 .fill,
+//   .c100.p63 .fill,
+//   .c100.p64 .fill,
+//   .c100.p65 .fill,
+//   .c100.p66 .fill,
+//   .c100.p67 .fill,
+//   .c100.p68 .fill,
+//   .c100.p69 .fill,
+//   .c100.p70 .fill,
+//   .c100.p71 .fill,
+//   .c100.p72 .fill,
+//   .c100.p73 .fill,
+//   .c100.p74 .fill,
+//   .c100.p75 .fill,
+//   .c100.p76 .fill,
+//   .c100.p77 .fill,
+//   .c100.p78 .fill,
+//   .c100.p79 .fill,
+//   .c100.p80 .fill,
+//   .c100.p81 .fill,
+//   .c100.p82 .fill,
+//   .c100.p83 .fill,
+//   .c100.p84 .fill,
+//   .c100.p85 .fill,
+//   .c100.p86 .fill,
+//   .c100.p87 .fill,
+//   .c100.p88 .fill,
+//   .c100.p89 .fill,
+//   .c100.p90 .fill,
+//   .c100.p91 .fill,
+//   .c100.p92 .fill,
+//   .c100.p93 .fill,
+//   .c100.p94 .fill,
+//   .c100.p95 .fill,
+//   .c100.p96 .fill,
+//   .c100.p97 .fill,
+//   .c100.p98 .fill,
+//   .c100.p99 .fill,
+//   .c100.p100 .fill {
+//     border: 0.08em solid #ffb400;
+//   }
+// }
 .portfolio-tab-list {
   display: flex;
   align-items: center;
@@ -1786,6 +1804,18 @@ button:focus {
     @media screen and (max-width: 450px) {
       min-height: 215px;
     }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .skill-container {
+    font-size: 15px;
+    grid-template-columns: auto auto !important;
+    row-gap: 20px;
+  }
+
+  .skill-item {
+    margin: 10px;
   }
 }
 
