--- a/src/assets/scss/main/_modal.scss
+++ b/src/assets/scss/main/_modal.scss
@@ -24,7 +24,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   border: none;
-  background: #fff;
+  background: #000;
   overflow: initial;
   border-radius: 10px;
   outline: none;
